# project-manager

./: Cargo.toml  README.md  build.rs  pm_completion.sh
.github/workflows/: ci.yml
src/: cli.rs  config.rs  main.rs  parse.rs
