[package]
name = "project-manager-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[[bin]]
name = "pm"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20.0"
prettytable-rs = "0.10.0"
dirs = "6.0.0"

# build for release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

